typesafe_builder_derive/tests/ui/12.stderr
error: Field `name` marked with `#[builder(required_if)]` must be of type `Option<T>`
  --> tests/ui/12.rs:13:15
   |
13 |         name: String, // Error: not Option<String>
   |               ^^^^^^
